# wvi-api-rust

./: .dockerignore  .env  .env.example  .env.production  .gitignore  ARCHITECTURE.en.md  ARCHITECTURE.md  Cargo.toml  DEPLOY.md  Dockerfile  README.md  SESSION_CONTEXT.md  deploy.sh  docker-compose.override.yml  docker-compose.wellex-dev.yml  docker-compose.yml  loadtest.k6.js
.github/workflows/: ci.yml  deploy.yml
argocd/: application.yaml  install.sh
docs/: AI_MODEL_PLAN.md  AI_RAG_DESIGN.md  openapi.yaml
docs/cycle-tracking/: IMPLEMENTATION_PLAN.md
docs/deploy/: APNS_SETUP.md
docs/qa/: generate_emotion_vectors.py  loadtest-results-2026-04-16.md  qa-report-2026-04-16.md  regenerate_vectors.py  wvi_validator.py
docs/qa/postman/: WVI-API.postman_collection.json  generate_collection.py
docs/qa/security/: security-audit-2026-04-16.md
docs/qa/test-vectors/: emotion_vectors.json  wvi_vectors.json
docs/superpowers/plans/: 2026-04-16-architecture-refactor.md
docs/superpowers/specs/: 2026-04-16-wvi-calibration-design.md
kong/: kong.yml
kubernetes/: deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml
migrations/: 001_initial.sql  002_privy.sql  003_social_and_indexes.sql  004_audit_log.sql  005_push_tokens.sql  006_family_members.sql  007_cleanup_outliers.sql  008_hot_indexes.sql  009_intraday_tables.sql  010_bp_source.sql  011_alarms_reminders.sql  012_ecg_source_analysis.sql  013_sensitivity_tables.sql  014_wvi_v3_emotion_stress.sql  015_daily_brief_tracking.sql  016_user_persona.sql  017_reviewer_flag.sql
monitoring/: grafana-dashboard.json  prometheus.yml
redis-cluster/: docker-compose.redis-cluster.yml
scripts/: ai-analytics.sh  analytics-prompt.txt  load-test.js  run-analytics.sh  seed_reviewer.sh
src/: audit.rs  cache.rs  config.rs  error.rs  events.rs  main.rs  metrics.rs  narrator_schedule.rs  validation.rs
src/activities/: handlers.rs
src/ai/: cli.rs  context_builder.rs  handlers.rs  mod.rs  precompute.rs  prompt_rules.rs
src/alarms/: handlers.rs
src/alerts/: handlers.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  privy.rs
src/biometrics/: computed.rs  handlers.rs  mod.rs  models.rs
src/dashboard/: handlers.rs
src/device/: handlers.rs
src/emotions/: engine.rs  handlers.rs  mod.rs  models.rs
src/emotions/v2/: baseline.rs  handlers.rs  inference.rs  metrics.rs  mod.rs  narrator.rs  triggers.rs
src/export/: handlers.rs
src/family/: handlers.rs
src/health/: handlers.rs
src/insights/: handlers.rs
src/intraday/: backfill.rs  derived.rs  handlers.rs  ingest.rs  lttb.rs  mod.rs  types.rs  worker.rs
src/nps/: handlers.rs
src/push/: apns.rs  handlers.rs  mod.rs  scheduler.rs
src/reminders/: evaluator.rs  handlers.rs  mod.rs
src/reports/: handlers.rs
src/risk/: handlers.rs
src/sensitivity/: baseline.rs  composite.rs  detection.rs  handlers.rs  mod.rs  narrator.rs  types.rs
src/settings/: handlers.rs
src/sleep/: handlers.rs
src/social/: handlers.rs
src/stress/v2/: handlers.rs  inference.rs  micro_pulse.rs  mod.rs
src/training/: handlers.rs
src/users/: handlers.rs  mod.rs
src/wvi/: calculator.rs  handlers.rs  mod.rs  models.rs  normalizer.rs
src/wvi/v3/: aggregator.rs  components.rs  forecast.rs  handlers.rs  mod.rs  profile_classifier.rs  reweighting.rs
tests/: health_test.rs
