[package]
name = "wvi-api"
version = "1.0.0"
edition = "2024"
description = "WVI — Wellness Vitality Index API. Rust backend with Axum."

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for Claude API)
reqwest = { version = "0.12", features = ["json", "stream"] }

# OpenAPI docs
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CSV export
csv = "1"

# Rand (for simulations)
rand = "0.9"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }
