[package]
name = "wvi-api"
version = "1.0.0"
edition = "2024"
description = "WVI — Wellness Vitality Index API. Rust backend with Axum."

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "compression-br", "compression-deflate"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
once_cell = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for Claude API)
reqwest = { version = "0.12", features = ["json", "stream"] }

# OpenAPI docs
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CSV export
csv = "1"

# Rand (for simulations)
rand = "0.9"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# LRU cache
lru = "0.12"

# Prometheus metrics
prometheus = "0.13"

# Rate limiting (tower_governor 0.7 — latest axum 0.8 compatible; 0.4 targets axum 0.7)
tower_governor = "0.7"

# OpenTelemetry — distributed tracing via OTLP/HTTP (Jaeger/Tempo/Grafana)
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
tracing-opentelemetry = "0.25"

# Sentry — panic + HTTP + tracing capture
sentry = { version = "0.34", default-features = false, features = ["backtrace","contexts","panic","reqwest","rustls","tracing"] }
sentry-tower = { version = "0.34", features = ["http"] }
sentry-tracing = "0.34"
md5 = "0.8.0"

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"
